--- a/src/main/resources/fr/afpa/user_management.fxml
+++ b/src/main/resources/fr/afpa/user_management.fxml
@@ -1,38 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="532.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.afpa.controllers.UserManagementController">
+<VBox prefHeight="345.0" prefWidth="532.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.afpa.controllers.UserManagementController">
    <children>
-      <TableView fx:id="tableView3C" layoutY="24.0" prefHeight="325.0" prefWidth="399.0">
-        <columns>
-          <TableColumn fx:id="tableCFName" prefWidth="75.0" text="First Name" />
-          <TableColumn fx:id="tableCLName" prefWidth="75.0" text="Last Name" />
-            <TableColumn fx:id="tableCCity" prefWidth="75.0" text="City" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Label layoutX="7.0" layoutY="4.0" prefHeight="20.0" prefWidth="117.0" text="Table People">
+      <Label prefHeight="20.0" prefWidth="117.0" text="Table People">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="405.0" layoutY="24.0" text="First Name :" />
-      <Label layoutX="405.0" layoutY="75.0" text="Last Name :" />
-      <TextField fx:id="textFieldLName" layoutX="404.0" layoutY="92.0" prefHeight="25.0" prefWidth="125.0" promptText="Last Name ..." />
-      <Label layoutX="405.0" layoutY="126.0" text="City :" />
-      <TextField fx:id="textFieldCity" layoutX="404.0" layoutY="143.0" prefHeight="25.0" prefWidth="125.0" promptText="City ..." />
-      <Button fx:id="saveButton" layoutX="404.0" layoutY="186.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="50.0" text="Save" />
-      <Button fx:id="cancelButton" layoutX="464.0" layoutY="186.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-      <Button fx:id="deleteButton" layoutX="429.0" layoutY="218.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="62.0" text="Delete" />
-      <TextField fx:id="textFieldFName" layoutX="405.0" layoutY="41.0" prefHeight="25.0" prefWidth="125.0" promptText="First Name ..." />
+      <HBox>
+         <children>
+            <TableView fx:id="tableView3C" prefHeight="325.0" prefWidth="399.0">
+               <columns>
+                  <TableColumn fx:id="tableCFName" prefWidth="75.0" text="First Name" />
+                  <TableColumn fx:id="tableCLName" prefWidth="75.0" text="Last Name" />
+                  <TableColumn fx:id="tableCCity" prefWidth="75.0" text="City" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <VBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="First Name :">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="3.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="textFieldFName" prefHeight="25.0" prefWidth="125.0" promptText="First Name ...">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="3.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Last Name :">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="2.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="textFieldLName" prefHeight="25.0" prefWidth="125.0" promptText="Last Name ...">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="3.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="City :">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="2.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="textFieldCity" prefHeight="25.0" prefWidth="125.0" promptText="City ...">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="2.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <HBox alignment="TOP_CENTER" spacing="5.0">
+                     <children>
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="50.0" text="Save" />
+                        <Button fx:id="deleteButton" alignment="CENTER" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="54.0" text="Delete" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets bottom="5.0" top="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Button fx:id="cancelButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#cancel" text="Cancel">
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
+                        </Button>
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
-</Pane>
+</VBox>
